nori-rs/tui/src/bottom_pane/snapshots/nori_tui__bottom_pane__tests__shared_agent_picker.snap
---
source: tui/src/bottom_pane/mod.rs
expression: rendered
---
                                                                                                    
  Select Agent                                                                                      
  Creates new conversation with selected agent (history not preserved)                              
                                                                                                    
  ▏1. Mock ACP (current)                                                                         ▕  
  ▏   Mock agent for testing                                                                     ▕  
   2. Mock ACP Alt                                                                                  
      Alternate mock agent for testing                                                              
   3. Claude Code                                                                                   
      Anthropic                                                                                     
   4. Codex                                                                                         
      OpenAI                                                                                        
   5. Gemini                                                                                        
      Google                                                                                        
                                                                                                    
                                                                                                    
  ↑↓/j/k move  enter select  shift-tab rec on  esc close
