nori-rs/tui/src/bottom_pane/snapshots/nori_tui__bottom_pane__tests__shared_model_picker.snap
---
source: tui/src/bottom_pane/mod.rs
expression: model_render
---
                                                                                                    
  Model                                                                                             
  Select a value for this ACP session setting                                                       
                                                                                                    
     Recommended                                                                                    
                                                                                                    
  ▏1. Stable (current)                                                                           ▕  
  ▏                                                                                              ▕  
   2. Preview                                                                                       
                                                                                                    
     Other                                                                                          
                                                                                                    
   3. Experimental                                                                                  
      experimental                                                                                  
   4. Use custom model...                                                                           
      Enter any model ID                                                                            
  ↑↓/j/k move  enter select  esc close
