nori-rs/tui/src/bottom_pane/snapshots/nori_tui__bottom_pane__tests__shared_session_config_picker.snap
---
source: tui/src/bottom_pane/mod.rs
expression: config_render
---
                                                                                                    
  Session Config                                                                                    
  Select an ACP session setting to change                                                           
     Option                                                                                         
  ▏  Model (Stable)                                                                              ▕  
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                ↑↓/j/k move  enter select  esc close
