nori-rs/tui/src/bottom_pane/snapshots/nori_tui__bottom_pane__tests__shared_settings_picker_search.snap
---
source: tui/src/bottom_pane/mod.rs
expression: filtered
---
                                                                                                    
  Configuration                                                                                     
  Toggle TUI settings (changes saved to config.toml)                                                
  ⌕  resize reflow                                                                                  
     Option                   Details                                                               
  ▏  Resize Reflow (on) (cu…  Reflow transcript history when the terminal width changes          ▕  
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                         ↑↓ move  type filter  enter select  esc stop search
