nori-rs/tui/src/bottom_pane/snapshots/nori_tui__bottom_pane__tests__status_and_composer_fill_height_without_bottom_padding.snap
---
source: tui/src/bottom_pane/mod.rs
expression: "render_snapshot(&pane, area)"
---
• Thinking really hard (0s • e
                              
                              
› Ask Nori to do anything
